--- a/nginx.conf
+++ b/nginx.conf
@@ -79,7 +79,7 @@ http {
     gzip  off;
 
     # Entrypoint generates the upstreams.conf config.
-    include /etc/nginx/upstreams.conf
+    include /etc/nginx/upstreams.conf;
 
     # Entrypoint generates the proxy_cache_path here, so it is configurable externally.
     include /etc/nginx/conf.d/cache_max_size.conf;
